--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!-- 照片 -->
       <div class="row text-center">
         <div class="col-12">
-          <img data-no-retina="true" width="20%" src="https://scontent.fkhh1-2.fna.fbcdn.net/v/t1.6435-9/120814385_3430341967058087_1394006465816956022_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=wTQpH4Z51CoAX_Wpuqo&_nc_ht=scontent.fkhh1-2.fna&oh=00_AT9zaHUSoykbcNW1L5M3FZdyPaO4OVHxAzd1MAZ1LYDU0g&oe=61F8FCB1" alt="Appoiqyu4fhiqypdk9hc" loading="auto" style="border-top-left-radius: 50%; border-top-right-radius: 50%; border-bottom-right-radius: 50%; border-bottom-left-radius: 50%;">
+          <img data-no-retina="true" width="20%" src="https://scontent.fkhh1-1.fna.fbcdn.net/v/t39.30808-6/272987072_4867316556693947_7977265892034114561_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=CpVIVwHhkjwAX94YKaw&_nc_ht=scontent.fkhh1-1.fna&oh=00_AT9SQrSRM0bff25Ev1HJiEt1x5zXcoZoXQv0gYmbKS_WjQ&oe=6226A598" alt="Appoiqyu4fhiqypdk9hc" loading="auto" style="border-top-left-radius: 50%; border-top-right-radius: 50%; border-bottom-right-radius: 50%; border-bottom-left-radius: 50%;">
         </div>
       </div>
       <!-- 介紹 -->
@@ -53,7 +53,7 @@
         
       </div> 
       
-      <div class="row  text-center justify-content-center"">
+      <div class="row  text-center justify-content-center">
         <div class="col-md-1 col-sm-1">
 		<a href="https://www.instagram.com/andy856994/">
 		<svg width="32" height="32" viewBox="0 0 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
@@ -231,6 +231,15 @@
           </ul>
         </div> -->
       </div>
+
+      <hr>
+      <h2>Autobiography</h2>
+      <hr>
+      <div class="row">
+        <div class="col-md-12 col-sm-12">
+          <p class="big_font">&emsp; &emsp;家父是理工方面的人才，小時候的印象中常常看到家中多出許多有趣的東西，如遙控坦克，遙控飛機等，或是一些電源供應器。在這樣的環境下我漸漸的對<mark><strong>理工方面</strong></mark>產生濃厚的興趣。真正激發我人生要往資訊方面走是國中電腦老師，因為當時畢業需要志工時數，為了取得時數，我便和我同學一同去幫忙電腦老師處理雜務，在這過程中我學到的有關電腦的基本知識，也嘗試了程式設計，過程中老師也提供我們非常多的學習資源。從那時起我便如同掉入資訊的世界。從國中的擔任機器人夏令營助教，到高中的數理競賽，皆獲得師長好評。到大學前還特別去實習了一翻，也算是見見世面。<br>&emsp; &emsp;到大學之後接觸了面向更廣了，不再只是寫寫程式而已，而是跟物理或是其他東西結合在一起。寫程式不再只是邏輯而已，需要再花很多時間去了解其他東西，而現在的我正在往這個方向發展，努力把<mark><strong>技能樹</strong></mark>點滿!</p>
+        </div>
+      </div>
       <!--<hr>
       <h2>Portfolio</h2>
       <hr>
@@ -279,7 +288,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <p>Copyright © MyWebsite. All rights reserved.</p>
+              <p>Copyright © DingZeAn's website. All rights reserved.</p>
             </div>
           </div>
         </div>
