--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               參與實習之心得：
               <ul>
                 <li>
-                  其實在這裡工作的這兩個月學到的技術並不多，更多學到的其實是RD們是怎麼工作的，遇到問題時怎麼解決，之前的我認為工程師都是一個人在寫CODE，但是來這邊就改觀。不同的晶片有不同的Team在負責，晶片之間的溝通也要說好，還有function之間的溝通，所以我個人認為當RD最重要的是良好的溝通能力還有好的EQ。
+                  其實在這裡工作的這兩個月學到的技術並不多，更多學到的其實是RD們是怎麼工作的，遇到問題時怎麼解決，之前的我認為工程師都是一個人在寫CODE，但是來這邊就改觀。不同的晶片有不同的Team在負責，晶片之間的溝通也要說好，還有function之間的溝通，<strong>所以我個人認為當RD最重要的是良好的溝通能力還有好的EQ </strong>。
                 </li>
                 <li>
                     還有實力也很重要，經驗較多的RD相較於經驗少的RD解BUG的速度就差很多，他們知道這個問題跟哪些function有關連，怎麼改會比較有效率。另外當要增加新的功能時，時間長短跟錯誤的多寡也取決於實力。
