new head picture

--- a/index.html
+++ b/index.html
@@ -156,18 +156,7 @@
                 <td>(IPOE)創客機器人大賽</td>
                 <td>冠軍</td>
               </tr>
-              <tr class="table-warning">
-                <th scope="row">4</th>
-                <td>2021</td>
-                <td>MNE 2021(Micro and Nano Engineering Conference)【Italy】<br><a href="https://drive.google.com/file/d/1JZKz4Nm_Ke2c1NjSwmmwoeEjfvE77gS4/view?usp=sharing">Impact of electron scattering in EUV mask absorber materials</a></td>
-                <td>接受並發表</td>
-              </tr>
-              <tr class="table-warning">
-                <th scope="row">5</th>
-                <td>2022</td>
-                <td>EIPBN 2022 (Electron, Ion and Photon Beam Technology and Nanofabrication ) 【united states】<br><a href="https://drive.google.com/drive/folders/1QnfZAR8fxnxg4OJKCDTMVZUR5AQ3GPmI?usp=sharing">A new parametric point spread function at low keV for next generation EUV mask proximity modeling and correction</a></td>
-                <td>接受並發表</td>
-              </tr>
+
               <!-- <tr>
                 <th scope="row">3</th>
                 <td colspan="2">2017/11</td>
@@ -242,14 +231,91 @@
         </div> -->
       </div>
 
-      <hr>
+
+
+
+
+
+
+
+<!--       <hr>
       <h2>Autobiography</h2>
       <hr>
       <div class="row">
         <div class="col-md-12 col-sm-12">
           <p class="big_font">&emsp; &emsp;家父是理工方面的人才，小時候的印象中常常看到家中多出許多有趣的東西，如遙控坦克，遙控飛機等，或是一些電源供應器。在這樣的環境下我漸漸的對<mark><strong>理工方面</strong></mark>產生濃厚的興趣。真正激發我人生要往資訊方面走是國中電腦老師，因為當時畢業需要志工時數，為了取得時數，我便和我同學一同去幫忙電腦老師處理雜務，在這過程中我學到的有關電腦的基本知識，也嘗試了程式設計，過程中老師也提供我們非常多的學習資源。從那時起我便如同掉入資訊的世界。從國中的擔任機器人夏令營助教，到高中的數理競賽，皆獲得師長好評。到大學前還特別去實習了一翻，也算是見見世面。<br>&emsp; &emsp;到大學之後接觸了面向更廣了，不再只是寫寫程式而已，而是跟物理或是其他東西結合在一起。寫程式不再只是邏輯而已，需要再花很多時間去了解其他東西，而現在的我正在往這個方向發展，努力把<mark><strong>技能樹</strong></mark>點滿!</p>
         </div>
-      </div>
+      </div> -->
+
+
+      <hr>
+      <h2>Publications</h2>
+      <hr>
+      <h4>國際會議論文:</h4>
+
+
+<span style="font-size:12pt">
+        <span style="text-justify:inter-ideograph">
+          <span style="line-height:150%">
+            <span style="tab-stops:list 30.0pt 36.0pt 49.65pt">
+              <span style="font-family:&quot;Times New Roman&quot;,serif">
+                <b><u>
+                  <span lang="EN-US">
+                    <span style="line-height:150%">
+                      <span style="color:black"></span></u></b><u>
+                        <span lang="EN-US"><span style="line-height:150%">
+                          <span style="color:black"></span>
+                      </span>
+                      </span></u>
+                      <span lang="EN-US" ><span style="line-height:150%"><span style="color:black">C.H. Liu, H.Y. Hsieh,S.P. Wang, Y.C. Li, C.S. Lee, <u>
+                  <span lang="EN-US">
+                    <span style="line-height:150%">
+                      <span style="color:black"><strong> Z.A. Ding</strong></span></u></b><u>
+                        <span lang="EN-US" ><span style="line-height:150%">
+                          
+                      </span>
+                      </span></u>, A.L. Chang, Y.X. Chen, Y.H. Chang, W.Y. Hsu, K.F. Huang</span></span></span><span lang="EN-US" style="line-height:150%">, “A new parametric point spread function at low keV for next generation EUV mask proximity modeling and correction,” <i>The 65th International Conference on Electron, Ion and Photon Beam Technology and Nanofabrication (EIPBN 2022)</i>, PA3, 
+                  <span style="color:black">(<strong><span ><span style="font-weight:normal">online</span></span></strong> poster), , New Orleans, USA, June . 2022</span>
+                </span>
+            </span>
+            </span>
+      </span>
+    </span>
+
+</br></br>
+
+      <span style="font-size:12pt">
+        <span style="text-justify:inter-ideograph">
+          <span style="line-height:150%">
+            <span style="tab-stops:list 30.0pt 36.0pt 49.65pt">
+              <span style="font-family:&quot;Times New Roman&quot;,serif">
+                <b><u>
+                  <span lang="EN-US">
+                    <span style="line-height:150%">
+                      <span style="color:black"></span></u></b><u>
+                        <span lang="EN-US"><span style="line-height:150%">
+                          
+                      </span>
+                      </span></u>
+                      <span lang="EN-US" ><span style="line-height:150%"><span style="color:black">Chun-Hung Liu, Hsiang-Yi Hsieh, Kuan-Fu Huang, Kuen-Yu Tsai, Shuen-Ping Wang, Wei-Yung Hsu, Fei-Ming Huang, Chih-Chiang Wu, Yun-Chin Li, Chieh-Sheng Lee, Po-Cheng Wu, <u>
+                  <span lang="EN-US">
+                    <span style="line-height:150%">
+                      <span style="color:black"><strong>Ze-An Ding</strong></span></u></b><u>
+                        <span lang="EN-US" ><span style="line-height:150%">
+                          <span style="color:black"></span>
+                      </span>
+                      </span></u>, Yung-Hsiang Chang, Ai-Ling Chang, Yi-Xuan Chen, Fu-Chu Hsu</span></span></span><span lang="EN-US" style="line-height:150%">, “Impact of electron scattering in EUV mask absorber materials,” <i>The 47th edition on the Micro and Nano Engineering Conference (MNE2021)</i>, PA3, 
+                  <span style="color:black">(<strong><span ><span style="font-weight:normal">online</span></span></strong> poster), Turin, Italy, Sep. 2021</span>
+                </span>
+            </span>
+            </span>
+      </span>
+    </span>
+
+
+
+
+
       <!--<hr>
       <h2>Portfolio</h2>
       <hr>
