new head picture

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         text-decoration: none;
         margin: 5px 80px;
     }
-  
+
     .android {
         background: #a4c639;
         color: white;
@@ -91,11 +91,11 @@
           <h5><span class="badge badge-secondary">Studying</span></h5>
           <ul>
             <li>大一下時加進了專題生的行列，我們的主題是<mark><strong>【半導體微影技術之研究】</strong></mark>，寫程式自動化分析各項數據。</li>
-            <li>我在2020 11 月 大一新生宿營之宣傳組的副組長，職務是負責寫宿營網頁<mark><strong>【<a style="font-size: 20px" href="https://2021hero.vercel.app">2021hero.vercel.app</a>】</strong></mark>，透過網頁之呈現，幫宿營爭取更多參加人數。</li>
+            <li>我在2020 11 月 大一新生宿營之宣傳組的副組長，職務是負責寫宿營網頁<mark><strong>【<a style="font-size: 20px ;color:  #4169e1;" href="https://2021hero.vercel.app">2021hero.vercel.app</a>】</strong></mark>，透過網頁之呈現，幫宿營爭取更多參加人數。</li>
             <li>發表國際會議論文</li>
             <ol>
-              <li>【2021 MNE】 A new parametric point spread function at low keV for next generation EUV mask proximity modeling and correction</li>
-              <li>【2022 EIPBN】 Impact of electron scattering in EUV mask absorber materials</li>
+              <li><a style="color: #4169e1;" href="https://drive.google.com/file/d/1JZKz4Nm_Ke2c1NjSwmmwoeEjfvE77gS4/view?usp=sharing">【2021 MNE】 A new parametric point spread function at low keV for next generation EUV mask proximity modeling and correction</a></li>
+              <li><a style="color: #4169e1;" href="https://drive.google.com/file/d/1Kvelb3Y_X1wFCK9W2koFHrB7DWxKGfbl/view?usp=sharing">【2022 EIPBN】 Impact of electron scattering in EUV mask absorber materials</a></li>
             </ol>
           </ul>
           <div class="row">
