--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <h5><span class="badge badge-secondary">Studying</span></h5>
           <ul>
             <li>大一下時加進了專題生的行列，我們的主題是<mark><strong>【半導體微影技術之研究】</strong></mark>，寫程式自動化分析各項數據。</li>
-            <li>我在2020 11 月 大一新生宿營之宣傳組的副組長，職務是負責寫宿營網頁<mark><strong>【<a style="font-size: 20px ;color:  #4169e1;" href="https://2021hero.vercel.app">2021hero.vercel.app</a>】</strong></mark>，透過網頁之呈現，幫宿營爭取更多參加人數。</li>
+            <li>我在2020年11 月，擔任新生宿營之宣傳組的副組長，職務是負責寫宿營網頁<mark><strong>【<a style="font-size: 20px ;color:  #4169e1;" href="https://2021hero.vercel.app">2021hero.vercel.app</a>】</strong></mark>，透過網頁之呈現，幫宿營爭取更多參加人數。</li>
             <li>發表國際會議論文</li>
             <ol>
               <li><a style="color: #4169e1;" href="https://drive.google.com/file/d/1JZKz4Nm_Ke2c1NjSwmmwoeEjfvE77gS4/view?usp=sharing">【2021 MNE】 A new parametric point spread function at low keV for next generation EUV mask proximity modeling and correction</a></li>
