update APEX letter

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                         <span lang="EN-US" ><span style="line-height:150%">
                           <span style="color:black"></span>
                       </span>
-                      </span></u>, and Shun-Ping Wang,</span></span></span><span lang="EN-US" style="line-height:150%">"Shape-based proximity effect correction method for throughput, fidelity, and contrast enhancement of electron-beam writer,"<i> Applied Physics Express,</i> 11P-4-5
-                  <span style="color:black">, Tokushima, Japan, 2022.</span>
+                      </span></u>, and Shun-Ping Wang,</span></span></span><span lang="EN-US" style="line-height:150%">"Shape-based proximity effect correction method for throughput, fidelity, and contrast enhancement of electron-beam writer,"<i> Applied Physics Express,</i> Volume 16, Number 1, 011001, Jan. 
+                  <span style="color:black">2023(SCI)</span>
                 </span>
             </span>
             </span>
