--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                           <span style="color:black"></span>
                       </span>
                       </span></u>, and Shun-Ping Wang,</span></span></span><span lang="EN-US" style="line-height:150%">"Shape-based proximity effect correction method for throughput, fidelity, and contrast enhancement of electron-beam writer,"<i> Applied Physics Express,</i> Volume 16, Number 1, 011001, Jan. 
-                  <span style="color:black">2023(SCI)</span>
+                  <span style="color:black">2023(SCI)[SCI, IF=2.895, Engineering 38/297=13% (Q1)] (本人為指導老師外第一學生作者)</span>
                 </span>
             </span>
             </span>
